--- a/pages/index.html
+++ b/pages/index.html
@@ -9,96 +9,134 @@
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
 
-<body>
-    <div class="main">
-        <nav>
-            <div>
-                <img id="logo" src="/images/logo.png" alt="">
-            </div>
-            <div class="nav-links">
+<body id="mainBody">
+
+    <table class="navbar">
+        <tr>
+            <td id="logo">
+                <img src="/images/logo.png" alt="">
+            </td>
+            <td id="links">
                 <ul>
-                    <a href="">Kik vagyunk mi</a>
-                    <a href="">Hírek</a>
-                    <a href="">Moderátornak jelentkezés</a>
+                    <a href="#whoWeAre">Kik vagyunk mi</a>
+                    <a href="#rules">Szabályzat</a>
+                    <a href="#moderators">Moderátornak jelentkezés</a>
+                </ul>
+            </td>
+        </tr>
+    </table>
+
+
+
+    <div class="mainText">
+        <h1>Szia! Ez itt a </h1>
+        
+        <img id="titleDesignImg" src="/images/—Pngtree—vector stylish web design elements_1386697.png" alt="">
+        <h2>Magyar Fortnite Közösség</h2>
+        <h1>hivatalos weboldala</h1>
+
+
+        <div id="whoWeAre" class="subTitle">Kik vagyunk mi?</div>
+        <div class="smallText">
+            facebook oldal
+            hivatalos honlapján jársz. Az oldalon megtalálod a legfrissebb és legrelevánsabb
+            híreket, olvashatsz a csoport történetéröl és moderátorainkról, sőt, még jeletkezhetsz is a
+            csapatunkba
+
+
+        </div>
+
+
+        <div id="rules" class="subTitle">Szabályzat</div>
+        <div class="smallText">
+            <div class="box first">
+                <p class="boxTitle"> Légy kedves és udvarias! </p>
+                <span class="boxText">
+                    Mindannyiunk közös feladata, hogy befogadó környezetet teremtsünk. Bánjunk mindenkivel tisztelettel.
+                    Az egészséges vita természetes, de a kedvesség elengedhetetlen.
+                </span>
+            </div>
+            <div class="box second">
+                <p class="boxTitle">Tilos a kereskedelem </p>
+                <span class="boxText">
+                    Ide tartozik az account eladás/vétel/csere, trade, kód eladás, stb.
+                </span>
+            </div>
+            <div class="box third">
+                <p class="boxTitle">Klán hirdetés </p>
+                <span class="boxText">
+                    Ha a klánodat szeretnéd hirdetni, a csoport tetején található rögzített posztban tedd, ne írj emiatt
+                    egy külön posztot.
+                </span>
+            </div>
+            <div class="box Fourth">
+                <p class="boxTitle"> Ha nem szeretnéd látni valaki posztjait...</p>
+                <span class="boxText">
+                    Ezt úgy tudod megoldani, ha blokkolod az illetőt. Többé nem fogod látni a csoportban a posztjait.
+                </span>
+            </div>
+            <div class="box Fifth">
+                <p class="boxTitle"> Figyelj a helyesírásra!</p>
+                <span class="boxText">
+
+                </span>
+            </div>
+            <div class="box Sixth">
+                <p class="boxTitle"> Csoport feltüntetése Youtube/Twitch</p>
+                <span class="boxText">
+                    Ha meg szeretnéd osztani a Youtube videódat/Twitch streamed, tűntesd fel a csoport logóját és
+                    linkjét (youtube-on elég csak a link).
+                    A logó a bejelentések fül alatt található.
+                </span>
+            </div>
+            <div class="box Seventh">
+                <p class="boxTitle"> Ne reklámozz más oldalakat.</p>
+                <span class="boxText">
+
+                </span>
+            </div>
+            <div class="box Eight">
+                <p class="boxTitle"> 
+                    Ne adj fel hirdetést</p>
+                <span class="boxText">
+
+                </span>
+            </div>
+            <div class="box Ninth">
+                <p class="boxTitle"> Ne spameld a csoportot</p>
+                <span class="boxText">
+
+                </span>
+            </div>
+
+        </div>
+
+
+        <div id="moderators" class="subTitle">Moderátornak jelentkezés</div>
+        <div class="smallText">
+            Ha szeretnél egy szuper csapat tagja lenni, és megfelelsz az alábbi
+            kritériumoknak, ne habozz jelentkezni!
+            <div class="box">
+                <p style="text-align: left;"><b> Kritériumok: </b></p>
+                <ul>
+                    <li>Napi legalább 15 perc aktivitás</li>
+                    <li>Betöltött 16. életév</li>
+                    <li>Intelligens viselkedés (káromkodás mellőzése, viták
+                        lezárása észérvekkel alátámasztva)</li>
+                    <li>Megfelelő helyesírás</li>
                 </ul>
             </div>
-        </nav>
-        <div class="mainText">
-            <h1>Szia! Ez itt a </h1>
-            <h2>Magyar Fortnite Közösség</h2>
-            <h1>hivatalos weboldala</h1>
-
-
-            <div class="subTitle">Kik vagyunk mi?</div>
-            <div class="smallText">
-                facebook oldal
-                hivatalos honlapján jársz. Az oldalon megtalálod a legfrissebb és legrelevánsabb
-                híreket, olvashatsz a csoport történetéröl és moderátorainkról, sőt, még jeletkezhetsz is a
-                csapatunkba
-
-                Mi a Lorem Ipsum?
-                A Lorem Ipsum egy egyszerû szövegrészlete, szövegutánzata a betûszedõ és nyomdaiparnak. A Lorem Ipsum az
-                1500-as évek óta standard szövegrészletként szolgált az iparban; mikor egy ismeretlen nyomdász
-                összeállította a betûkészletét és egy példa-könyvet vagy szöveget nyomott papírra, ezt használta. Nem
-                csak 5 évszázadot élt túl, de az elektronikus betûkészleteknél is változatlanul megmaradt. Az 1960-as
-                években népszerûsítették a Lorem Ipsum részleteket magukbafoglaló Letraset lapokkal, és legutóbb
-                softwarekkel mint például az Aldus Pagemaker.
-
-                Miért használjuk?
-                Ez egy régóta elfogadott tény, miszerint egy olvasót zavarja az olvasható szöveg miközben a szöveg
-                elrendezését nézi. A Lorem Ipsum használatának lényege, hogy többé-kevésbé rendezettebb betûket
-                tartalmaz, ellentétben a Tartalom helye, Tartalom helye-féle megoldással. Sok desktop szerkesztõ és
-                weboldal szerkesztõ használja a Lorem Ipsum-ot mint alapbeállítású szövegmodellt, és egy keresés a lorem
-                ipsum-ra sok félkész weboldalt fog eredményezni.
-
-
-
-            </div>
-
-            <div class="subTitle">Hírek</div>
-            <div class="smallText">Mi a Lorem Ipsum?
-                A Lorem Ipsum egy egyszerû szövegrészlete, szövegutánzata a betûszedõ és nyomdaiparnak. A Lorem Ipsum az
-                1500-as évek óta standard szövegrészletként szolgált az iparban; mikor egy ismeretlen nyomdász
-                összeállította a betûkészletét és egy példa-könyvet vagy szöveget nyomott papírra, ezt használta. Nem
-                csak 5 évszázadot élt túl, de az elektronikus betûkészleteknél is változatlanul megmaradt. Az 1960-as
-                években népszerûsítették a Lorem Ipsum részleteket magukbafoglaló Letraset lapokkal, és legutóbb
-                softwarekkel mint például az Aldus Pagemaker.
-
-                Miért használjuk?
-                Ez egy régóta elfogadott tény, miszerint egy olvasót zavarja az olvasható szöveg miközben a szöveg
-                elrendezését nézi. A Lorem Ipsum használatának lényege, hogy többé-kevésbé rendezettebb betûket
-                tartalmaz, ellentétben a Tartalom helye, Tartalom helye-féle megoldással. Sok desktop szerkesztõ és
-                weboldal szerkesztõ használja a Lorem Ipsum-ot mint alapbeállítású szövegmodellt, és egy keresés a lorem
-                ipsum-ra sok félkész weboldalt fog eredményezni.
-
-
-
-            </div>
-            <div class="subTitle">Moderátornak jelentkezés</div>
-            <div class="smallText">
-                Ha szeretnél egy szuper csapat tagja lenni, és megfelelsz az alábbi
-                kritériumoknak, ne habozz jelentkezni!
-                <div class="criterium">
-                    <p style="text-align: left;"><b> Kritériumok: </b></p>
-                    <ul>
-                        <li>Napi legalább 15 perc aktivitás</li>
-                        <li>Betöltött 16. életév</li>
-                        <li>Intelligens viselkedés (káromkodás mellőzése, viták
-                            lezárása észérvekkel alátámasztva)</li>
-                        <li>Megfelelő helyesírás</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="moderatorForm">
-                <form>
-                    <label for="fname">Teljes név:</label><br>
-                    <input type="text" id="fname" name="fname"><br>
-                    <label for="lname">Last name:</label><br>
-                    <input type="text" id="lname" name="lname">
-                  </form>
-            </div>
         </div>
+
+        <div class="moderatorForm">
+            <form>
+                <label for="fname">Teljes név:</label><br>
+                <input type="text" id="fname" name="fname"><br>
+                <label for="lname">Last name:</label><br>
+                <input type="text" id="lname" name="lname">
+            </form>
+        </div>
+
 
 
 </body>
